project(DesignModel)
find_package(cppzmq)
add_executable(IntFloatPort IntFloatPort.cpp port.cpp MainSecen.cpp)
target_include_directories(IntFloatPort PUBLIC include)
if(cppzmq_FOUND)
    target_include_directories(IntFloatPort PUBLIC ${cppzmq_INCLUDE_DIR})
    target_link_libraries(IntFloatPort ${cppzmq_LIBRARY})
endif()
target_link_libraries(IntFloatPort pthread)